# camera-bot

./: INSTRUCCIONES.md  README.md  config.yaml  pyproject.toml  requirements.txt
app/: camera.py  config.py  interfaces.py  main.py  routes.py
app/templates/: index.html
