[project]
name = "pi-camera-stream"
version = "0.1.0"
description = "Minimal FastAPI MJPEG camera stream for Raspberry Pi"
readme = "README.md"
requires-python = ">=3.10"

# Dependencias duras del MVP
# tomli sólo se instala en Python < 3.11
dependencies = [
    "fastapi==0.111.0",
    "uvicorn[standard]==0.29.0",
    "opencv-python-headless==4.10.0.82",
    "pydantic-settings==2.2.1",
    "tomli>=2.0.1; python_version<'3.11'",
]

[project.scripts]
pi-camera = "main:app"
# Ejecuta servidor directamente con `uv run app`
app = "main:cli"

[tool.uv]

[tool.pi-camera]
# Configuración de cámara y stream
# Modifica estos valores según tu hardware y preferencia
device_id = 0
fps = 15

# Configuración SSL/TLS para HTTPS
enable_ssl = false             # true para habilitar HTTPS, false para HTTP
ssl_keyfile = ""               # ej: "/etc/letsencrypt/live/tu-dominio.com/privkey.pem"
ssl_certfile = ""              # ej: "/etc/letsencrypt/live/tu-dominio.com/fullchain.pem" 